py_js_srcにfaviconを設定

--- a/markdown/py_js_src/src/index.html
+++ b/markdown/py_js_src/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Python, JavaScriptの始め方</title>
+    <link rel="icon" href="../../../images/misw_logo.ico">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300,400,500,700,900&display=swap&subset=japanese" rel="stylesheet">
 <body>
