--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
             <div class="Others">
                 <h2>その他</h2>
+                <li><a href="https://misw.github.io/markdown/mis_git_tutorial.html" target="_blank">Gitチュートリアル</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/debugtool.pdf" target="_blank">デバッグツール入門</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/統計学.pdf" target="_blank">統計班詳細</a></li>
                 <li><a href="https://misw.github.io/markdown/mis_ruby_bot.html" target="_blank">おしゃべりBotを作ろう</a></li>
