シンタックスハイライトを修正
言語指定の"bash"を"shell"に変更, "\n"を"\\n"に修正，hljs-metaとhljs-commentの色の調整

--- a/markdown/git_tutorial_src/src/index.html
+++ b/markdown/git_tutorial_src/src/index.html
@@ -20,7 +20,7 @@ if (platform.name == 'IE') {
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js" integrity="sha256-aYTdUrn6Ow1DDgh5JTc3aDGnnju48y/1c8s1dgkYPQ8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/languages/typescript.min.js" integrity="sha256-LWmmFG1DeNLUUp0G4vr7vjaHOEFAvzYZ9exFbHFvg8w=" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/languages/shell.min.js" integrity="sha256-nwOM3xEc6CFfrPNDN1upX+5ynjWKAXsg+bW63SSzte0=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
 </html>
