--- a/py_js/print.html
+++ b/py_js/print.html
@@ -1147,7 +1147,7 @@ export const Vec3D = {
 };
 </code></pre>
 <p>index.html</p>
-<pre><code class="language-typescript">&lt;!DOCTYPE html&gt;
+<pre><code class="language-html">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;meta charset=&quot;UTF-8&quot;&gt;
