C言語講座2020追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="./images/misw_logo.ico">
         <link rel="stylesheet" type="text/css" href="./css/reset.css">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
-        <link rel="stylesheet" type="text/css" href="./css/darkmode.css">      
+        <link rel="stylesheet" type="text/css" href="./css/darkmode.css">
         <script>
             let currentClass = localStorage.mode || "light-mode";
             function toggleDarkLight() {
@@ -19,7 +19,7 @@
                 body.classList.add(currentClass);
                 save();
             }
-            
+
             document.addEventListener("DOMContentLoaded", function() {
                 const body = document.getElementById("body");
                 body.classList.add(currentClass);
@@ -63,6 +63,7 @@
                 <li><a href="https://misw.github.io/c_practice.html" target="_blank">C言語入門記事一覧</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/C言語講座2017.pdf" target="_blank">C言語講座2017年度資料</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/C言語講座2018.pdf" target="_blank">C言語講座2018年度資料</a></li>
+                <li><a href="https://misw.github.io/markdown/pdf/C言語講座2020.pdf" target="_blank">C言語講座2020年度資料</a></li>
                 <li><a href="https://misw.github.io/markdown/mis_cccprimer.html" target="_blank">C#入門(サイトリンク+α)</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/VBA講座.pdf" target="_blank">VBA入門</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/R講座.pdf" target="_blank">R入門</a></li>
