--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <li><a href="https://misw.github.io/markdown/pdf/統計学.pdf" target="_blank">統計班詳細</a></li>
                 <li><a href="https://misw.github.io/markdown/mis_ruby_bot.html" target="_blank">おしゃべりBotを作ろう</a></li>
                 <li><a href="https://misw.github.io/markdown/mis_kyougiprogramming.html" target="_blank">競プロをやろう。</a></li>
+                <li><a href="https://misw.github.io/markdown/mis_webar.html" target="_blank">WebARコンテンツを作ってみよう</a></li>
             </div>
 
             <div class="Columes">
